--- a/index.html
+++ b/index.html
@@ -4,8 +4,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patrycja Gadkowska</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=New+Amsterdam&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/shared.css">
 </head>
 <body>
-    
+    <header id="main-header">
+        <div id="main-nav-cntr">
+            <div id="logo"><a href="/">home</a></div>
+            <nav id="main-nav">
+                <ul>
+                    <li>
+                        <a href="/portfolio">portfolio</a>
+                    </li>
+                    <li>
+                       <a href="/about">about me</a>
+                    </li>
+                    <li>
+                        <a href="/contact">contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <nav id="mobile-nav">
+            <ul>
+                <li>
+                    <a href="/">home</a>
+                </li>
+                <li>
+                    <a href="/portfolio">portfolio</a>
+                </li>
+                <li>
+                    <a href="/about">about me</a>
+                </li>
+                <li>
+                    <a href="/contact">contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1 id="hello">Hi! My name is Patrycja Gadkowska</h1>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, delectus ea. Non illo error nobis vel assumenda inventore itaque ab quibusdam. Obcaecati reiciendis voluptatibus ab eos omnis voluptatem vel neque?
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit quaerat voluptatem fugit quos, consequuntur earum facere doloribus animi odio inventore sunt, nihil, commodi iusto ducimus velit praesentium! Ab, atque? Sequi.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia id nam culpa consequuntur iusto officiis delectus perferendis ipsa enim ipsam maxime at quo, impedit nulla officia eum non ad dolorum.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione laborum vitae et quaerat necessitatibus enim ullam illo deleniti tempora fugiat? Nostrum architecto ea officia libero commodi amet fugit animi voluptatibus.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum asperiores voluptate velit debitis nam eius nesciunt consequuntur rem pariatur nulla? Minus dolore, accusamus eligendi sint omnis nostrum ut dolorum velit.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod non officia fuga beatae, qui praesentium sapiente asperiores esse quasi facilis ea deleniti explicabo natus blanditiis dolore nihil maxime impedit. Veritatis.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur placeat nesciunt et? Sunt a, modi, provident, animi iusto ad ab dolorem eos consequatur autem non rem sed fugit aut
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem iure odio deserunt corrupti sequi laudantium fuga, laborum explicabo maxime minus odit, magnam libero quisquam temporibus atque quam voluptate architecto voluptatem.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque amet libero voluptate laborum dolorum sed qui ullam numquam temporibus repudiandae, expedita odit dicta. Assumenda exercitationem dolores nihil explicabo aliquam iste?
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt accusantium veritatis quibusdam harum adipisci laborum, temporibus culpa error repellat earum ad, nobis facilis quia? Commodi modi quaerat ab iusto placeat.
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus, molestias tenetur eveniet excepturi odio rem ut? Perspiciatis necessitatibus aliquid unde, dicta, dolore voluptate sequi provident minima ducimus sapiente cumque nulla!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus vero facere ipsam ratione! Sint quod beatae vel delectus non pariatur quo libero ea facere nostrum! Deserunt, autem alias? Consectetur, a?
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et ad aperiam fugit tempore libero id repellendus, accusamus nobis modi sapiente at rem minima voluptas, doloremque dolor ipsa non, dolore aliquam!
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic inventore recusandae repudiandae quam accusamus reprehenderit, quo qui, doloremque adipisci amet nostrum. Harum, exercitationem? Laborum ea optio voluptatibus, deserunt corporis id.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, labore. Quod numquam eaque fugiat optio perferendis, nesciunt reiciendis aut voluptate quaerat facilis vel modi! Aspernatur temporibus ducimus quisquam fugit facere.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus culpa consectetur provident voluptatibus amet, quis in quam suscipit temporibus laboriosam necessitatibus ipsa tempore nulla mollitia molestias vero, illum quia magni.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit provident excepturi nostrum neque assumenda hic maiores iusto tempora! Aperiam minima voluptate odit placeat ipsam nobis deleniti repellendus totam corrupti tempore!
+            
+    </main>
+    <footer></footer>
 </body>
 </html>
