add hover effect to nav items

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <div id="main-nav-cntr">
             <div id="logo"><a href="/">home</a></div>
             <nav id="main-nav">
-                <ul>
-                    <li>
+                <ul class="nav-list">
+                    <li class="nav-list-item">
                         <a href="/portfolio">portfolio</a>
                     </li>
-                    <li>
+                    <li class="nav-list-item">
                        <a href="/about">about me</a>
                     </li>
-                    <li>
+                    <li class="nav-list-item">
                         <a href="/contact">contact</a>
                     </li>
                 </ul>
@@ -29,16 +29,16 @@
         </div>
         <nav id="mobile-nav">
             <ul>
-                <li>
+                <li class="nav-list-item">
                     <a href="/">home</a>
                 </li>
-                <li>
+                <li class="nav-list-item">
                     <a href="/portfolio">portfolio</a>
                 </li>
-                <li>
+                <li class="nav-list-item">
                     <a href="/about">about me</a>
                 </li>
-                <li>
+                <li class="nav-list-item">
                     <a href="/contact">contact</a>
                 </li>
             </ul>
