--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=New+Amsterdam&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/shared.css">
+    <link rel="stylesheet" href="styles/home.css">
 </head>
 <body>
     <header id="main-header">
@@ -65,6 +66,23 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit provident excepturi nostrum neque assumenda hic maiores iusto tempora! Aperiam minima voluptate odit placeat ipsam nobis deleniti repellendus totam corrupti tempore!
             
     </main>
-    <footer></footer>
+    <footer id="main-footer">
+        <div id="main-footer__cols">
+            <section class="footer-col">
+                <span>&copy; 2024</span>
+                <span>Patrycja Gadkowska</span>
+            </section>
+            <section class="footer-col">
+                <ul class="footer-list">
+                    <li class="footer-list-item">
+                        <a href="https://www.linkedin.com/in/patrycja-gadkowska-600b34154/">linkedin</a>
+                    </li>
+                    <li class="footer-list-item">
+                        <a href="https://www.github.com/patrycjagadkowska/">github</a>
+                    </li>
+                </ul>
+            </section>
+        </div>
+    </footer>
 </body>
 </html>
