change links in nav

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <nav id="main-nav">
                 <ul class="nav-list">
                     <li class="nav-list-item">
-                        <a href="/portfolio">portfolio</a>
+                        <a href="/portfolio.html">portfolio</a>
                     </li>
                     <li class="nav-list-item">
-                       <a href="/about">about me</a>
+                       <a href="/about.html">about me</a>
                     </li>
                     <li class="nav-list-item">
-                        <a href="/contact">contact</a>
+                        <a href="/contact.html">contact</a>
                     </li>
                 </ul>
             </nav>
@@ -34,13 +34,13 @@
                     <a href="/">home</a>
                 </li>
                 <li class="nav-list-item">
-                    <a href="/portfolio">portfolio</a>
+                    <a href="/portfolio.html">portfolio</a>
                 </li>
                 <li class="nav-list-item">
-                    <a href="/about">about me</a>
+                    <a href="/about.html">about me</a>
                 </li>
                 <li class="nav-list-item">
-                    <a href="/contact">contact</a>
+                    <a href="/contact.html">contact</a>
                 </li>
             </ul>
         </nav>
