add hover letters animation

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=New+Amsterdam&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/shared.css">
     <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="styles/hover-letters.css">
+    <script src="scripts/hover-letters.js" defer></script>
 </head>
 <body>
     <header id="main-header">
@@ -46,7 +48,7 @@
         </nav>
     </header>
     <main>
-        <h1 id="hello">Hi! My name is Patrycja Gadkowska</h1>
+        <h1 id="hello" class="hover-letters">Hi! My name is Patrycja Gadkowska</h1>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, delectus ea. Non illo error nobis vel assumenda inventore itaque ab quibusdam. Obcaecati reiciendis voluptatibus ab eos omnis voluptatem vel neque?
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit quaerat voluptatem fugit quos, consequuntur earum facere doloribus animi odio inventore sunt, nihil, commodi iusto ducimus velit praesentium! Ab, atque? Sequi.
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia id nam culpa consequuntur iusto officiis delectus perferendis ipsa enim ipsam maxime at quo, impedit nulla officia eum non ad dolorum.
