add basic info section with styles

--- a/index.html
+++ b/index.html
@@ -49,24 +49,17 @@
     </header>
     <main>
         <h1 id="hello" class="hover-letters">Hi! My name is Patrycja Gadkowska</h1>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, delectus ea. Non illo error nobis vel assumenda inventore itaque ab quibusdam. Obcaecati reiciendis voluptatibus ab eos omnis voluptatem vel neque?
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit quaerat voluptatem fugit quos, consequuntur earum facere doloribus animi odio inventore sunt, nihil, commodi iusto ducimus velit praesentium! Ab, atque? Sequi.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia id nam culpa consequuntur iusto officiis delectus perferendis ipsa enim ipsam maxime at quo, impedit nulla officia eum non ad dolorum.
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione laborum vitae et quaerat necessitatibus enim ullam illo deleniti tempora fugiat? Nostrum architecto ea officia libero commodi amet fugit animi voluptatibus.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum asperiores voluptate velit debitis nam eius nesciunt consequuntur rem pariatur nulla? Minus dolore, accusamus eligendi sint omnis nostrum ut dolorum velit.
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod non officia fuga beatae, qui praesentium sapiente asperiores esse quasi facilis ea deleniti explicabo natus blanditiis dolore nihil maxime impedit. Veritatis.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur placeat nesciunt et? Sunt a, modi, provident, animi iusto ad ab dolorem eos consequatur autem non rem sed fugit aut
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem iure odio deserunt corrupti sequi laudantium fuga, laborum explicabo maxime minus odit, magnam libero quisquam temporibus atque quam voluptate architecto voluptatem.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque amet libero voluptate laborum dolorum sed qui ullam numquam temporibus repudiandae, expedita odit dicta. Assumenda exercitationem dolores nihil explicabo aliquam iste?
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt accusantium veritatis quibusdam harum adipisci laborum, temporibus culpa error repellat earum ad, nobis facilis quia? Commodi modi quaerat ab iusto placeat.
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus, molestias tenetur eveniet excepturi odio rem ut? Perspiciatis necessitatibus aliquid unde, dicta, dolore voluptate sequi provident minima ducimus sapiente cumque nulla!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus vero facere ipsam ratione! Sint quod beatae vel delectus non pariatur quo libero ea facere nostrum! Deserunt, autem alias? Consectetur, a?
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et ad aperiam fugit tempore libero id repellendus, accusamus nobis modi sapiente at rem minima voluptas, doloremque dolor ipsa non, dolore aliquam!
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic inventore recusandae repudiandae quam accusamus reprehenderit, quo qui, doloremque adipisci amet nostrum. Harum, exercitationem? Laborum ea optio voluptatibus, deserunt corporis id.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, labore. Quod numquam eaque fugiat optio perferendis, nesciunt reiciendis aut voluptate quaerat facilis vel modi! Aspernatur temporibus ducimus quisquam fugit facere.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus culpa consectetur provident voluptatibus amet, quis in quam suscipit temporibus laboriosam necessitatibus ipsa tempore nulla mollitia molestias vero, illum quia magni.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit provident excepturi nostrum neque assumenda hic maiores iusto tempora! Aperiam minima voluptate odit placeat ipsam nobis deleniti repellendus totam corrupti tempore!
-            
+        <section id="basic-info">
+            <div class="col-lg-2"></div>
+            <p class="col-lg-2">
+                I am self-taught in HTML, CSS, and JavaScript/TypeScript. 
+                I build applications using React and Node.js. 
+                Feel free to check out my <a href="/portfolio.html"><strong>portfolio</strong></a>, 
+                review my code on <a href="https://www.github.com/patrycjagadkowska" target="_blank"><strong>GitHub</strong></a>, 
+                or connect with me on <a href="https://www.linkedin.com/in/patrycja-gadkowska-600b34154/" target="_blank"><strong>LinkedIn</strong></a> 
+                or through <a href="/contact.html"><strong>other means</strong></a>.
+            </p>
+        </section>
     </main>
     <footer id="main-footer">
         <div id="main-footer__cols">
