--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
             <section class="footer-col">
                 <ul class="footer-list">
                     <li class="footer-list-item">
-                        <a href="https://www.linkedin.com/in/patrycja-gadkowska-600b34154/">linkedin</a>
+                        <a href="https://www.linkedin.com/in/patrycja-gadkowska-600b34154/" target="_blank">linkedin</a>
                     </li>
                     <li class="footer-list-item">
-                        <a href="https://www.github.com/patrycjagadkowska/">github</a>
+                        <a href="https://www.github.com/patrycjagadkowska/" target="_blank">github</a>
                     </li>
                 </ul>
             </section>
