--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <link href="https://fonts.googleapis.com/css2?family=New+Amsterdam&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/shared.css">
     <link rel="stylesheet" href="styles/home.css">
-    <link rel="stylesheet" href="styles/hover-letters.css">
+    <link rel="stylesheet" href="styles/effects/hover-letters.css">
+    <link rel="stylesheet" href="styles/effects/fade-in-section.css">
     <script src="scripts/hover-letters.js" defer></script>
+    <script src="scripts/fade-in-section.js" defer></script>
 </head>
 <body>
     <header id="main-header">
@@ -49,7 +51,7 @@
     </header>
     <main>
         <h1 id="hello" class="hover-letters">Hi! My name is Patrycja Gadkowska</h1>
-        <section id="basic-info">
+        <section id="basic-info" class="fade-in-section">
             <div class="col-lg-2"></div>
             <p class="col-lg-2">
                 I am self-taught in HTML, CSS, and JavaScript/TypeScript. 
