add hamburger btn with js code

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="styles/effects/fade-in-section.css">
     <script src="scripts/hover-letters.js" defer></script>
     <script src="scripts/fade-in-section.js" defer></script>
+    <script src="scripts/mobile-nav-btn.js" defer></script>
 </head>
 <body>
     <header id="main-header">
@@ -31,6 +32,11 @@
                     </li>
                 </ul>
             </nav>
+            <button class="hamburger-btn" id="mobile-nav-btn">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
         </div>
         <nav id="mobile-nav">
             <ul>
