add nav-list class in mobile nav

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </button>
         </div>
         <nav id="mobile-nav">
-            <ul>
+            <ul class="nav-list">
                 <li class="nav-list-item">
                     <a href="/">home</a>
                 </li>
