--- a/portfolio.html
+++ b/portfolio.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patrycja Gadkowska - Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=New+Amsterdam&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=New+Amsterdam&family=Roboto:wght@400;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles/shared.css">
     <link rel="stylesheet" href="styles/portfolio.css">
     <link rel="stylesheet" href="styles/effects/fade-in-section.css">
+    <link rel="stylesheet" href="styles/effects/slide-in-out.css">
     <script src="scripts/fade-in-section.js" defer></script>
     <script src="scripts/mobile-nav-btn.js" defer></script>
+    <script src="scripts/slide-in-out.js" defer></script>
 </head>
+
 <body>
     <header id="main-header">
         <div id="main-nav-cntr">
@@ -23,7 +28,7 @@
                         <a href="/portfolio.html">portfolio</a>
                     </li>
                     <li class="nav-list-item">
-                       <a href="/about.html">about me</a>
+                        <a href="/about.html">about me</a>
                     </li>
                     <li class="nav-list-item">
                         <a href="/contact.html">contact</a>
@@ -61,18 +66,50 @@
                     <figure class="card">
                         <!-- picture will be added here -->
                         <img src="./assets/portuapp-project.png" alt="PortuApp Project screenshot">
-                        <figcaption>
-                            <div class="card-title">
+                        <figcaption class="slider">
+                            <div class="card-title sliding-el">
                                 <h3>PortuApp</h3>
                                 <p class="card-title__description">
                                     React App to learn portuguese using NoSQL database.
                                 </p>
                             </div>
-                            <div class="card-actions">
-                                <a href="">gh</a>
-                                <a href="">demo</a>
+                            <div class="card-actions sliding-el-reverse">
+                                <a href="">
+                                    <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+                                    <!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
+                                    <svg width="800px" height="800px" viewBox="0 0 20 20" version="1.1"
+                                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+
+                                        <title>github [#142]</title>
+                                        <desc>Created with Sketch.</desc>
+                                        <defs>
+
+                                        </defs>
+                                        <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                            <g id="Dribbble-Light-Preview"
+                                                transform="translate(-140.000000, -7559.000000)" fill="#000000">
+                                                <g id="icons" transform="translate(56.000000, 160.000000)">
+                                                    <path
+                                                        d="M94,7399 C99.523,7399 104,7403.59 104,7409.253 C104,7413.782 101.138,7417.624 97.167,7418.981 C96.66,7419.082 96.48,7418.762 96.48,7418.489 C96.48,7418.151 96.492,7417.047 96.492,7415.675 C96.492,7414.719 96.172,7414.095 95.813,7413.777 C98.04,7413.523 100.38,7412.656 100.38,7408.718 C100.38,7407.598 99.992,7406.684 99.35,7405.966 C99.454,7405.707 99.797,7404.664 99.252,7403.252 C99.252,7403.252 98.414,7402.977 96.505,7404.303 C95.706,7404.076 94.85,7403.962 94,7403.958 C93.15,7403.962 92.295,7404.076 91.497,7404.303 C89.586,7402.977 88.746,7403.252 88.746,7403.252 C88.203,7404.664 88.546,7405.707 88.649,7405.966 C88.01,7406.684 87.619,7407.598 87.619,7408.718 C87.619,7412.646 89.954,7413.526 92.175,7413.785 C91.889,7414.041 91.63,7414.493 91.54,7415.156 C90.97,7415.418 89.522,7415.871 88.63,7414.304 C88.63,7414.304 88.101,7413.319 87.097,7413.247 C87.097,7413.247 86.122,7413.234 87.029,7413.87 C87.029,7413.87 87.684,7414.185 88.139,7415.37 C88.139,7415.37 88.726,7417.2 91.508,7416.58 C91.513,7417.437 91.522,7418.245 91.522,7418.489 C91.522,7418.76 91.338,7419.077 90.839,7418.982 C86.865,7417.627 84,7413.783 84,7409.253 C84,7403.59 88.478,7399 94,7399"
+                                                        id="github-[#142]">
+
+                                                    </path>
+                                                </g>
+                                            </g>
+                                        </g>
+                                    </svg>
+                                </a>
+                                <a href="">
+                                    <?xml version="1.0" encoding="utf-8"?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
+                                    <svg viewBox="0 0 24 24" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd"
+                                            d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22ZM10.6935 15.8458L15.4137 13.059C16.1954 12.5974 16.1954 11.4026 15.4137 10.941L10.6935 8.15419C9.93371 7.70561 9 8.28947 9 9.21316V14.7868C9 15.7105 9.93371 16.2944 10.6935 15.8458Z"
+                                            fill="#000000" />
+                                    </svg>
+                                </a>
                             </div>
-                            <div class="card-tech">
+                            <div class="card-tech sliding-el">
                                 <ul class="tech-list">
                                     <li class="tech-list-item">
                                         <span>HTML</span>
@@ -93,39 +130,64 @@
                             </div>
                         </figcaption>
                     </figure>
-                    <li class="card-list-item">
-                        <figure class="card">
-                            <img src="./assets/storage-app.png" alt="StorageApp Project screenshot">
-                            <figcaption>
-                                <div class="card-title">
-                                    <h3>StorageApp</h3>
-                                    <p class="card-title__description">A sales data management system (frontend and backend)</p>
-                                </div>
-                                <div class="card-actions">
-                                    <a href="">gh</a>
-                                </div>
-                                <div class="card-tech">
-                                    <ul class="tech-list">
-                                        <li class="tech-list-item">
-                                            <span>HTML</span>
-                                        </li>
-                                        <li class="tech-list-item">
-                                            <span>CSS</span>
-                                        </li>
-                                        <li class="tech-list-item">
-                                            <span>React</span>
-                                        </li>
-                                        <li class="tech-list-item">
-                                            <span>Node.js</span>
-                                        </li>
-                                        <li class="tech-list-item">
-                                            <span>PostgreSQL</span>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </figcaption>
-                        </figure>
-                    </li>
+                <li class="card-list-item">
+                    <figure class="card">
+                        <img src="./assets/storage-app.png" alt="StorageApp Project screenshot">
+                        <figcaption class="slider">
+                            <div class="card-title sliding-el">
+                                <h3>StorageApp (in progress)</h3>
+                                <p class="card-title__description">A sales data management system (frontend and backend)
+                                </p>
+                            </div>
+                            <div class="card-actions sliding-el-reverse">
+                                <a href="">
+                                    <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+                                    <!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
+                                    <svg width="800px" height="800px" viewBox="0 0 20 20" version="1.1"
+                                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+
+                                        <title>github [#142]</title>
+                                        <desc>Created with Sketch.</desc>
+                                        <defs>
+
+                                        </defs>
+                                        <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                            <g id="Dribbble-Light-Preview"
+                                                transform="translate(-140.000000, -7559.000000)" fill="#000000">
+                                                <g id="icons" transform="translate(56.000000, 160.000000)">
+                                                    <path
+                                                        d="M94,7399 C99.523,7399 104,7403.59 104,7409.253 C104,7413.782 101.138,7417.624 97.167,7418.981 C96.66,7419.082 96.48,7418.762 96.48,7418.489 C96.48,7418.151 96.492,7417.047 96.492,7415.675 C96.492,7414.719 96.172,7414.095 95.813,7413.777 C98.04,7413.523 100.38,7412.656 100.38,7408.718 C100.38,7407.598 99.992,7406.684 99.35,7405.966 C99.454,7405.707 99.797,7404.664 99.252,7403.252 C99.252,7403.252 98.414,7402.977 96.505,7404.303 C95.706,7404.076 94.85,7403.962 94,7403.958 C93.15,7403.962 92.295,7404.076 91.497,7404.303 C89.586,7402.977 88.746,7403.252 88.746,7403.252 C88.203,7404.664 88.546,7405.707 88.649,7405.966 C88.01,7406.684 87.619,7407.598 87.619,7408.718 C87.619,7412.646 89.954,7413.526 92.175,7413.785 C91.889,7414.041 91.63,7414.493 91.54,7415.156 C90.97,7415.418 89.522,7415.871 88.63,7414.304 C88.63,7414.304 88.101,7413.319 87.097,7413.247 C87.097,7413.247 86.122,7413.234 87.029,7413.87 C87.029,7413.87 87.684,7414.185 88.139,7415.37 C88.139,7415.37 88.726,7417.2 91.508,7416.58 C91.513,7417.437 91.522,7418.245 91.522,7418.489 C91.522,7418.76 91.338,7419.077 90.839,7418.982 C86.865,7417.627 84,7413.783 84,7409.253 C84,7403.59 88.478,7399 94,7399"
+                                                        id="github-[#142]">
+
+                                                    </path>
+                                                </g>
+                                            </g>
+                                        </g>
+                                    </svg>
+                                </a>
+                            </div>
+                            <div class="card-tech sliding-el">
+                                <ul class="tech-list">
+                                    <li class="tech-list-item">
+                                        <span>HTML</span>
+                                    </li>
+                                    <li class="tech-list-item">
+                                        <span>CSS</span>
+                                    </li>
+                                    <li class="tech-list-item">
+                                        <span>React</span>
+                                    </li>
+                                    <li class="tech-list-item">
+                                        <span>Node.js</span>
+                                    </li>
+                                    <li class="tech-list-item">
+                                        <span>PostgreSQL</span>
+                                    </li>
+                                </ul>
+                            </div>
+                        </figcaption>
+                    </figure>
+                </li>
                 </li>
             </ul>
         </section>
@@ -149,4 +211,5 @@
         </div>
     </footer>
 </body>
+
 </html>
