--- a/about.html
+++ b/about.html
@@ -58,7 +58,8 @@
     </header>
     <main>
         <section id="about-section">
-            <h1>My name is Patrycja Gadkowska</h1>
+            <h1>Patrycja Gadkowska</h1>
+            <h2>Web Developer</h2>
             <p>
                 I am a Polish Web Developer currently living in Portugal.
                 As a self-taught individual, I continuously expand my knowledge
