--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
         </nav>
     </header>
     <main>
-        <h1 class="page-title">My Projects</h1>
+        <h1 id="page-title">My projects</h1>
         <section id="projects">
             <ul class="card-list">
                 <li class="card-list-item">
