add photo and rwd to index

--- a/index.html
+++ b/index.html
@@ -58,15 +58,17 @@
     <main>
         <h1 id="hello" class="hover-letters">Hi! My name is Patrycja Gadkowska</h1>
         <section id="basic-info" class="fade-in-section">
-            <div class="col-lg-2"></div>
-            <p class="col-lg-2">
-                I am self-taught in HTML, CSS, and JavaScript/TypeScript. 
-                I build applications using React and Node.js. 
-                Feel free to check out my <a href="/portfolio.html"><strong>portfolio</strong></a>, 
-                review my code on <a href="https://www.github.com/patrycjagadkowska" target="_blank"><strong>GitHub</strong></a>, 
-                or connect with me on <a href="https://www.linkedin.com/in/patrycja-gadkowska-600b34154/" target="_blank"><strong>LinkedIn</strong></a> 
-                or through <a href="/contact.html"><strong>other means</strong></a>.
-            </p>
+            <div class="col-lg-2" id="my-photo" aria-label="author's photography"></div>
+            <div class="col-lg-2" id="my-description">
+                <p>
+                    I am self-taught in HTML, CSS, and JavaScript/TypeScript. 
+                    I build applications using React and Node.js. 
+                    Feel free to check out my <a href="/portfolio.html"><strong>portfolio</strong></a>, 
+                    review my code on <a href="https://www.github.com/patrycjagadkowska" target="_blank"><strong>GitHub</strong></a>, 
+                    or connect with me on <a href="https://www.linkedin.com/in/patrycja-gadkowska-600b34154/" target="_blank"><strong>LinkedIn</strong></a> 
+                    or through <a href="/contact.html"><strong>other means</strong></a>.
+                </p>
+            </div>
         </section>
     </main>
     <footer id="main-footer">
